--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Space+Mono');
+
 .container {
     background: #ffffff;
     display: block;
@@ -39,7 +40,8 @@
     word-wrap: normal;
     letter-spacing: 1px;
 }
-.expl{
+
+.expl {
     font-size: 16px;
     color: black;
     font-weight: 400;
@@ -50,16 +52,18 @@
         font-weight: 550;
         font-size: 14px;
     }
-    .intro-name{
+
+    .container{
+        margin-top: 2em;
+    }
+
+    .intro-name {
         font-size: 20px;
     }
+
     .avatar {
-        /* width: 10%; */
         width: 120px !important;
-        /* you can use % */
         height: 120px !important;
     }
 
-  
- 
 }
